kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  selector:
    app.kubernetes.io/component: webhook
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  type: ClusterIP
